Correct tmux current window style

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,8 +49,7 @@ set -g status-bg colour235
 set -g status-fg white
 
 # highlight current window
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg green
+set-window-option -g window-status-current-style bg=green,fg=black
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
