--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,9 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+# bind alt+shift+[ to ctrl+\/
+bind \ copy-mode
+
 ###########################
 # Status Bar
 ###########################
