--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,13 +25,18 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# resize panes
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
 # keep current path when opening windows and panes
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
 # bind alt+shift+[ to ctrl+\/
-bind \ copy-mode
 
 ###########################
 # Status Bar
