--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,6 +31,10 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+# add index to panes
+set -g pane-border-status top
+set -g pane-border-format "#{pane_index}"
+
 # keep current path when opening windows and panes
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
