--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,8 +32,8 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # add index to panes
-set -g pane-border-status top
-set -g pane-border-format "#{pane_index}"
+set -g pane-border-status off
+set -g pane-border-format ""
 
 # keep current path when opening windows and panes
 bind c new-window -c "#{pane_current_path}"
