--- a/tmuxinator/blog.yml
+++ b/tmuxinator/blog.yml
@@ -22,7 +22,7 @@ root: ~/
 # on_project_stop: command
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
-pre_window: rvm use 2.5.1
+pre_window: rbenv local 3.0.1
 
 # Pass command line options to tmux. Useful for specifying a different tmux.conf.
 # tmux_options: -f ~/.tmux.mac.conf
